# iis-asgi-handler

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  RedisAsgiHandler.sln  appveyor.yml
AsgiHandler/: AsgiHandler.def  CMakeLists.txt
AsgiHandlerLib/: AsgiHttpRequestMsg.h  AsgiHttpResponseMsg.h  AsgiMsg.h  AsgiWsConnectMsg.h  AsgiWsSendMsg.h  CMakeLists.txt  ChannelLayer.h  HttpModule.cpp  HttpModule.h  HttpModuleFactory.cpp  HttpModuleFactory.h  HttpRequestHandlerSteps.h  RedisAsgiHandlerLib.vcxproj  RedisChannelLayer.h  ResponsePump.cpp  WsReader.h  WsRequestHandler.cpp  WsRequestHandlerSteps.h  WsWriter.cpp  WsWriter.h
AsgiHandlerTest/: CMakeLists.txt  test_FlushResponseStep.cpp  test_ReadBodyStep.cpp  test_SendToApplicationStep.cpp  test_WaitForResponseStep.cpp  test_WriteResponseStep.cpp
IntegrationTests/: CMakeLists.txt  IntegrationTests.pyproj  conftest.py  requirements.txt  test.py  test_asgi_ws.py  test_config.py  test_django_http.py  test_http.py  test_pool.py  test_ws.py
IntegrationTests/fixtures/: __init__.py  asgi.py  django_worker.py  etw.py  iis.py  requests.py  worker.py
ProcessPool/: CMakeLists.txt  ProcessPool.cpp  ProcessPool.def  process-pool-iis-schema.xml
ProcessPoolLib/: CMakeLists.txt  GlobalModule.cpp  GlobalModule.h  JobObject.cpp  JobObject.h  ProcessPool.cpp  ProcessPool.h  ScopedHandle.h  ScopedResources.h
ProcessPoolTest/: CMakeLists.txt  main.cpp  test_ProcessPool.cpp
RedisAsgiHandler/: CMakeLists.txt  RedisAsgiHandler.cpp  RedisAsgiHandler.def  RedisAsgiHandler.vcxproj
RedisAsgiHandlerLib/: AsgiHttpRequestMsg.h  AsgiHttpResponseMsg.h  AsgiMsg.h  AsgiWsReceiveMsg.h  CMakeLists.txt  HttpModule.cpp  HttpModule.h  HttpModuleFactory.cpp  HttpModuleFactory.h  HttpRequestHandler.cpp  HttpRequestHandler.h  HttpRequestHandlerSteps.cpp  HttpRequestHandlerSteps.h  IChannelLayer.h  Logger.cpp  Logger.h  RedisAsgiHandlerLib.vcxproj  RedisChannelLayer.cpp  RedisChannelLayer.h  RequestHandler.cpp  RequestHandler.h  ResponsePump.cpp  ResponsePump.h  ScopedRedisReply.h  WsReader.cpp  WsReader.h  WsRequestHandler.cpp  WsRequestHandler.h  WsRequestHandlerSteps.cpp  WsRequestHandlerSteps.h
RedisAsgiHandlerTest/: CMakeLists.txt  RedisAsgiHandlerTest.vcxproj  main.cpp  mock_ChannelLayer.h  mock_HttpRequestHandler.h  mock_Logger.h  mock_RedisChannelLayer.h  mock_ResponsePump.h  mock_httpserv.h  test_Logger.cpp  test_ReadBodyStep.cpp  test_RedisChannelLayer.cpp  test_SendToApplicationStep.cpp  test_WaitForResponseStep.cpp  test_WriteResponseStep.cpp
SharedUtils/: CMakeLists.txt  Logger.cpp  Logger.h
SharedUtilsTest/: CMakeLists.txt  main.cpp  test_Logger.cpp
cli/: CMakeLists.txt  cli.vcxproj  main.cpp
dependencies/: CMakeLists.txt
dependencies/googletest/: CMakeLists.txt
dependencies/hiredis/: CMakeLists.txt
dependencies/msgpack-c/: CMakeLists.txt
